# dither_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  dither_images.py
src/: main.rs
