[package]
edition = "2021"
name = "dither_rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
dither = "0.3.2"
env_logger = "0.11.6"
image = "0.24.3"
log = "0.4.22"
rayon = "1.10.0"
walkdir = "2.3.2"
